# cpp-x11-make-screenshot

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  screenshot.cpp  screenshot.h
include/: cmdopts.h  screenshot.h  version.h
src/: CMakeLists.txt  cmdopts.cpp  main.cpp  screenshot.cpp
